@@ -5,6 +5,7 @@ Vanicae: Fix for guild management window updates
 wheeljack: Fix for missing tradeskill favorites
 Vanicae: Tribute Focus, SE_DivineSave, SE_Flurry, SE_Accuracy
 wheeljack: Fix for losing items in world containers
+pfyon: quest::createBot()
 
 ==09/08/2010==
 gaeorn: fixes for new stricter version of gcc/glib
